# DofusBotFM

./: CMakeLists.txt
.github/workflows/: main.yml
script/EnumGenerator/: EnumGenerator.cmake  EnumGenerator.py
src/: DummyRuneApplication.cpp  DummyRuneApplication.h  FM.cpp  Item.cpp  Item.h  RuneApplicationInterface.h
test/: CMakeLists.txt  DummyRuneApplicationTest.cpp  FMTest.cpp
test/mock/: MockRuneApplication.h
